Fix the navigation at bottom and hide overlap
This puts all the step information in a window in the middle of the
page. This will help with the "paging" in a little bit.

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -88,6 +88,11 @@ pre.copy {
 /**
  * Steps
  */
+.instruction-area {
+  height: 555px;
+  overflow: hidden;
+}
+
 .steps {
   font-size: 20px;
 }
@@ -123,7 +128,6 @@ div.step-active {
   background: #EAEAEA;
   color: #333;
 }
-
 
 /**
  * Forms
